# Knowling

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  SKILL.md  knowling-design.md  package-lock.json  package.json  pyproject.toml  worker.js  wrangler.jsonc
.claude/: launch.json
.github/workflows/: pages.yml
demo/: README.md  build.py  examples.json  index.html  manifest.json
demo/components/: bayes_theorem.html  binary_search.html  calc_derivative_chain-rule.html  circle_area.html  compound_interest.html  damped_oscillation.html  derivative_tangent.html  exponential_decay.html  fourier_square_wave.html  logarithm_base.html  normal_distribution.html  phys_ohm.html  projectile_motion.html  quadratic_vertex.html  sigmoid_function.html  sine-real.html  sine_function.html  taylor_series_exp.html
demo/review/: 01-discriminant.html  02-pythagoras.html  03-diff-squares.html  04-frequency.html  05-sine-audio.html  06-manim-area.html  07-manim-auto.html  08-quadratic.html  09-solid-geometry.html  index.html
demo/specs/: bayes_theorem.json  binary_search.json  (+13 more)
deploy/: Dockerfile  cloudflare.md
docs/: api.md  borrow-analysis.md  phase2-adaptive-learning-mapping.md  seam-contract-draft.md
knowling/: __init__.py  assembler.py  cli.py  engine.py  server.py  studio.py
tests/: test_blocks.py  test_codegen_robustness.py  test_compile_mode.py  test_fidelity.py  test_manim.py  test_math.py  test_modality.py  test_param_sim.py  test_pipeline.py  test_qa.py  test_quiz.py  test_refine.py  test_retriever.py  test_seam.py  test_server.py  test_temml.py
(+53 files in other folders)
